--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -18,7 +18,7 @@
           <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-        <title>¡Bienvenido!</title>
+        <title>¡Bienvenido a Skyfolk! - Iniciar sesión</title>
         <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," />
         <link rel="shortcut icon" href="{{STATIC_URL}}img/logo.ico"> 
 	      <script src="{{STATIC_URL}}js/showandhide.js"></script>
@@ -49,15 +49,13 @@
 	{% block extra_head %}
 	{% endblock %}
     </head>
-    <body>
-      <header>
-      <div class="head">
+    <body> 
+<div class="namesn">
+    <div class="logo">
             <h5><i>S</i>kyfolk.</h5>
-              <div class="logo">
-                  <img src="http://s11.postimg.org/58jltbaqb/logo.png">
-             </div>
-             </div>
-      </header>
+                 <img src="{{STATIC_URL}}img/logo2.png">
+    </div>
+    </div>
 
        <div id="background_cycler" > <!-- Random backgrounds -->
 
@@ -66,24 +64,22 @@
       </script>
 
       <img class="active" src="{{STATIC_URL}}img/backgrounds/1.jpg" alt=""/>
-        <img src="{{STATIC_URL}}img/backgrounds/2.jpg" alt=""/>
-          <img src="{{STATIC_URL}}img/backgrounds/3.jpg" alt=""/>
-            <img src="{{STATIC_URL}}img/backgrounds/4.jpg" alt=""/>  
-              <img src="{{STATIC_URL}}img/backgrounds/5.jpg" alt=""/>
-                <img src="{{STATIC_URL}}img/backgrounds/6.jpg" alt=""/>
-                  <img src="{{STATIC_URL}}img/backgrounds/7.jpg" alt=""/>
-                    <img src="{{STATIC_URL}}img/backgrounds/8.jpg" alt=""/>
+        <img src="{{STATIC_URL}}img/backgrounds/5.jpg" alt=""/>
+          <img src="{{STATIC_URL}}img/backgrounds/7.jpg" alt=""/>
+            <img src="{{STATIC_URL}}img/backgrounds/6.jpg" alt=""/>  
       </div>
 
        	
        {% block content %}{% endblock %}
 
-         <footer>
-  <ul>
-    <li><a>About us</a></li>
-    <li><a>Our team</a></li>
-    <li><a>Compromise</a></li>
-  </ul>
+  <footer>
+         <div class="flex">
+         </div>
+            <ul>
+                   <li><a>About us</a></li>
+                    <li><a>Our team</a></li>
+                      <li><a>Compromise</a></li>
+            </ul>
   </footer>
     </body>
 
