--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -46,7 +46,7 @@
   <aside>
     <nav>
       <li class="perfil" onclick="javascript:window.location.href='/config/profile'"><i class="fontawesome-user"></i>Perfil</li>
-      <li class="Contraseña" onclick="javascript:window.location.href='/config/changepass'"><i class="fontawesome-lock"></i>Contraseña</li>
+      <li class="Contraseña" onclick="javascript:window.location.href='/accounts/password/change/'"><i class="fontawesome-lock"></i>Contraseña</li>
       <li class="Seguridad"><i class="fontawesome-eye-open"></i>Seguridad y privacidad</li>
       <li class="Movil"><i class="fontawesome-envelope-alt"></i>Movil y correo</li>
       <li class="widgets"><i class="fontawesome-list-ul"></i>Widgets</li>
