--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -54,7 +54,7 @@
       <li class="ban"><i class="fontawesome-minus-sign"></i>Cuentas bloqueadas</li>
     </nav>
   </aside>
-<section id="contra">
+<div id="contra">
 <li>
 <form id="levi">
 	{% block cf-title %}{% endblock %}
@@ -74,9 +74,8 @@ Verificar contraseña <input class="actual" type="password" name="Repita su nuev
 -->
 
 <!--  </form> -->
-</section>
+</div>
 </body>
-</header>
 </html>
 {% endblock%}
 
