--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -98,7 +98,7 @@
     </nav>
 {% endif %}
 
-
+<!--
  <div class="Mensaje" id="js-timer">
   <div class="Mensaje-icon">
     <i class="fa fa-bell-o"></i>
@@ -109,6 +109,7 @@
   </div>
   <button class="Mensaje-close js-messageClose"><i class="fa fa-times"></i></button>
 </div>
+-->
 <!-- Configuración rápida -->
 <!--
       <div id="confr" class="col-xs-6 col-md-4">
@@ -148,6 +149,7 @@
       </div>-->
 <!-- Fin de conf rápida -->
 <!-- Notificacion me gusta -->
+<!---
 <div id="notifi">
 <div class="love">
   <h4> Has recibido un <a>Me gusta.</a> </h4>
@@ -155,12 +157,13 @@
   <span><i class="fontawesome-heart"></i><p><a href="#">Homer Simpson</a> le gusta un mensaje tuyo.</p></span>
 </div>
 </div>
+-->
 <!-- Fin notificacion me gusta -->
 <div class="container">
 
   
   <div class="col-lg-8 col-md-6 col-sm-12">
-
+<!-- Contenedor principal, engloba el tablon, widgets... [IMPORTANTE]-->
     <div class="container">
  
       <div class="col-lg-6 col-md-12 col-sm-12">
