--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -33,7 +33,7 @@
 	</div>
 	<div class="chg">
     	{{ perfil_form }}
-		<button class="btn btn-info" id="btn" type="submit">Salvar cambios</button>
+		<button class="btn btn-info" id="boton-perfil" type="submit">Salvar cambios</button>
 		</div>
 	</form>
 {% endblock %}
