--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -135,12 +135,16 @@ top.window.outerWidth = screen.availWidth;
   <li class="fa fa-bell fa-lg"><em>2</em></li>
   <div id="notificationn">
     <ul class="not">
-      <li><h4>Notificaciones</h4>
-      </li>
-      <li><i class="fa fa-heart fa-lg" id="love"><a>A rocio le gusta tu comentario.</a></i></li>
-      <li><i class="fa fa-user fa-lg"><a>Pepe ha comenzado a seguirte.</a></i></li>
-      <li><i class="fa fa-paper-plane-o fa-lg"><a>Pedro te ha enviado un mensaje.</a></i></li>
-      <li><h5>View all notification</h5></li>
+  <li>
+      <div class="cabeza">
+        <em>3</em>
+      </div>
+  </li>
+  <div class="msg">
+      <li><i class="fa fa-heart fa-lg"></i><a>+1 me gusta.</a></li>
+      <li><i class="fa fa-user fa-lg"></i><a>Pepe ha comenzado a seguirte.</a></li>
+      <li><i class="fa fa-paper-plane-o fa-lg"></i><a>Pedro te ha enviado un mensaje.</a></li>
+</div>
   </ul>
   </div>
 </div>
