--- a/skyfolk/templates/django_messages/base.html
+++ b/skyfolk/templates/django_messages/base.html
@@ -1,14 +1,19 @@
-{% extends "base.html" %}
+<head>
+    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/mensajes_privados.css"/>
+</head>
+<!-- No es necesario de momento '''% extends "base.html" %''' -->
 {% load i18n %}
+
 {% load url from future %} 
 {% block bodyclass %}about{% endblock %}
 {% block content %}  
 {% endblock %}
 {% block sidebar %}
+
 <ul class="subnavilist">
-    <li><a href="{% url 'messages_inbox' %} ">&raquo;&nbsp;{% trans "Inbox" %}</a></li>
-    <li><a href="{% url 'messages_outbox' %} ">&raquo;&nbsp;{% trans "Sent Messages" %}</a></li>
-    <li><a href="{% url 'messages_compose' %} ">&raquo;&nbsp;{% trans "New Message" %}</a></li>
-    <li><a href="{% url 'messages_trash' %} ">&raquo;&nbsp;{% trans "Trash" %}</a></li>
+    <li><a href="{% url 'messages_inbox' %} ">&raquo;&nbsp;{% trans "Bandeja de entrada" %}</a></li>
+    <li><a href="{% url 'messages_outbox' %} ">&raquo;&nbsp;{% trans "Mensajes enviados" %}</a></li>
+    <li><a href="{% url 'messages_compose' %} ">&raquo;&nbsp;{% trans "Nuevo mensaje" %}</a></li>
+    <li><a href="{% url 'messages_trash' %} ">&raquo;&nbsp;{% trans "Papelera" %}</a></li>
 </ul>
 {% endblock %}
