--- a/skyfolk/templates/django_messages/inbox.html
+++ b/skyfolk/templates/django_messages/inbox.html
@@ -1,33 +1,82 @@
 {% extends "django_messages/base.html" %} 
 {% load i18n %} 
 {% load url from future %}
-
+{% load app_filters %}
+{% block include_files %}
 {% block content %}
-<h1>{% trans "Inbox" %}</h1>
+<head>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
+<body>
+<!-- nav con logotipo -->
+<nav class="box-tool">
+  <li><div class="logo"></div></li>
+  <li class="chat"><div></div></li>
+</nav>
+<!-- Menu de opciones --> 
+
+  <aside>
+    <nav class="vertical">
+      <li onclick="javascript:location.href='/messages/inbox'"><i class="fa fa-bars fa-lg"></i>Recibidos</li>
+      <li onclick="javascript:location.href='/messages/outbox'"><i class="fa fa-paper-plane fa-lg"></i>Enviados</li>
+      <li onclick="javascript:location.href='/messages/inbox'"><i class="fa fa-user fa-lg"></i>Mis contactos</li>
+      <li onclick="javascript:location.href='/messages/inbox'"><i class="fa fa-users fa-lg"></i>Grupos</li>
+      <li onclick="javascript:location.href='/messages/inbox'"><i class="fa fa-ban fa-lg"></i>Spam</li>
+      <li onclick="javascript:location.href='/messages/trash'"><i class="fa fa-trash fa-lg"></i>Papelera</li>
+      <li><div class="entrada"><input type="search" target="search" placeholder="Busca un mensaje..."></input></div></li>
+    </nav>
+  </aside>
+
+<div><h1 class="titulo_m"><i class="fa fa-envelope-o"></i>Mensajes privados</h1><button onclick="javascript:location.href='/messages/compose'" class="fa fa-send fa-lg"></button></div>
 {% if message_list %} 
-<table class="messages">
-    <thead>
+<div class="messages">
+<div class="wrapper">
+
+    <!--<thead>
         <tr><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Received" %}</th><th>{% trans "Action" %}</th></tr>
-    </thead>
+    </thead>-->
     <tbody>
 {% for message in message_list %} 
-    <tr>
-        <td>{{ message.sender }}</td>
-        <td>
+<!-- Codigo modificado (Adrian) --> 
+   <li> <div class="bt">
+
+{% if user_profile.profile.image %}
+    <div class="name_and_image">
+    <div class="name"><a>{{ message.sender }}</a></div>
+    <img src="{{user_profile.profile.image.url}}">
+    </div>
+{% else %}
+    <div class="name_and_image">
+    <div class="name"><a>{{ message.sender }}</a></div>
+    <img src="{{STATIC_URL}}img/generic-avatar.png"  alt="img" class="usr-img img-responsive">
+    </div>
+{% endif %}
+        <div class="asunto">
             {% if message.new %}<strong>{% endif %}
             {% if message.replied %}<em>{% endif %}
-            <a href="{{message.get_absolute_url }}">{{ message.subject }}</a>
+            <a class="message_subject" href="{{message.get_absolute_url }}">{{ message.subject }}</a>
             {% if message.replied %}</em>{% endif %}
-            {% if message.new %}</strong>{% endif %}</td>
-        <td>{{ message.sent_at|date:_("DATETIME_FORMAT") }}</td>
-        <td><a href="{% url 'messages_delete' message.id %}">{% trans "delete" %}</a></td>
-    </tr>
+            {% if message.new %}</strong>{% endif %}
+        <div class="resumen">
+        <p>{{ message.body|linebreaksbr}}...</p>
+        </div>
+        </div>
+        <div class="time">
+        <i class="date_time">{{ message.sent_at|date:_("DATETIME_FORMAT") }}</i>
+        </div>
+        <ul class="ct">
+        <li><a class="fa fa-remove fa-lg" href="{% url 'messages_delete' message.id %}"></a></li>
+        </ul>
+    </div>
+    </li>
 {% endfor %}
     </tbody>
-</table>
+</div>
+</div>
 {% else %}
-<p>{% trans "No messages." %}</p>
+<p class="no_messages">{% trans "¡No tienes mensajes!" %}</p>
+<img class="no_mess" src="http://blog.cteep.com/wp-content/uploads/sugerencias.png" title="no_messages" alt="no_messages">
 {% endif %}  
-
-<p>HOLAAAAS</p>
 {% endblock %}
+{% endblock %}
+</body>
