--- a/skyfolk/templates/django_messages/compose.html
+++ b/skyfolk/templates/django_messages/compose.html
@@ -2,6 +2,7 @@
 {% load i18n %} 
 {% block content %} 
 <h1>{% trans "Compose Message"%}</h1>
+<div class="contenedor">
 <form action="" method="post">
 {% csrf_token %} 
 <table>
@@ -9,5 +10,5 @@
 </table>
 <input type="submit" value="{% trans "Send" %} &raquo;"/>
 </form>
-
+</div>
 {% endblock %}
